--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.3.1
   firebase_storage: ^11.0.10
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
